# irtracker

./: README.md
KCFcpp-master/src/: itracker.cpp  itracker.h  kcftracker.cpp  kcftracker.hpp
yolov5/: CMakeLists.txt
yolov5/demo/: CMakeLists.txt  config.yaml  tracker.cpp  tracker.h  yolo_demo.cpp
yolov5/inc/: basic.h  type_api.h  yolo.h
yolov5/src/: CMakeLists.txt  basic.cpp  yolo.cpp
